Added List data structure and change names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(Programacion3)
 set(CMAKE_CXX_STANDARD 17)
 
 include(FetchContent)
+set(FETCHCONTENT_QUIET NO)
 
 # Agrego todos los test.
 add_subdirectory(U00_Repaso)
