--- a/U05_Hash/CMakeLists.txt
+++ b/U05_Hash/CMakeLists.txt
@@ -3,3 +3,6 @@ add_executable(U06-E01 Ej-01/main.cpp HashMap/HashMap.h)
 add_executable(U06-E02 Ej-02/main.cpp)
 
 add_executable(U06-E03 Ej-03/main.cpp)
+
+add_executable(U06-Main-hash HashMap/main.cpp)
+add_executable(ARGUMENTOS HashMap/mainArg.cpp)
