--- a/U07_Grafos/CMakeLists.txt
+++ b/U07_Grafos/CMakeLists.txt
@@ -3,3 +3,5 @@ add_executable(U07-E01 Ej-01/main.cpp )
 add_executable(U07-E02 Ej-02/main.cpp)
 
 add_executable(U07-E03 Ej-03/main.cpp)
+
+add_executable(Graph Grafo/main.cpp)
